Created the sent_analysis.py (needs work) and respective notebook. Added packages to requirements. Updated pre_processor.py.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy
 pandas
 scikit-learn
 hdbscan
+tensorflow
 
 # tests/linter
 black
@@ -28,3 +29,19 @@ six>=1.14
 joblib
 memoized-property
 termcolor
+
+# preprocessing
+ipywidgets
+nltk
+transformers
+string
+re
+
+
+
+
+
+
+
+
+
